Migrate to parent-style poms